# lzq_ws

./: README.md  extrinsics.yml  intrinsics.yml  out.txt  out_1.txt  out_3.3.txt  out_sort.txt  out_vertex_1.txt
devel/: .catkin  .rosinstall
devel/include/Car_Spraying/: QueryServoAngle.h  QueryServoAngleRequest.h  QueryServoAngleResponse.h  SetServoAngle.h  SetServoDamping.h  SetTwoAngle.h
devel/include/track_avoid/: Depth.h
devel/lib/Car_Spraying/: ApproximateVG  FL  LatitudeLines  MF  Sig_id  UniformSampling  actionGreedPT  alpha_shape  bilateralFilter  calculate  cloud_height  cloud_sort  cloud_transform  color_restrain  color_sepration  deletOutline  deletRepeatPoint_v1  hole_fix  image  image_segmentation  imagesub  img_test  output_cloud  output_txtfile  pcd2obj  pcd2off  pcd2ply  point_line  pointcloud_comparate  radiusOutlierRemoval  ransac  read_rgb  statisticalOutlierRemoval  tmp_pointcloud  uservo_demo_node  uservo_move  uservo_move_feedback  uservo_move_v1.1  vertex_bind  voxelGrid
devel/lib/camera_calibration/: calibrate_helper.py  run_calib_IR.py  run_calib_RGB.py
devel/lib/camera_split/: camera_split  capture  capture_v2  key_board  op_yolo_boxes  sad_test  stereo_calibrator  stereo_matching  stereo_matching_ros  test_1
devel/lib/home_work/: img_test_11  take_photo  work1114
devel/lib/pkgconfig/: Car_Spraying.pc  camera_calibration.pc  camera_split.pc  home_work.pc  hunter_msgs.pc  plug_layers.pc  track_avoid.pc
devel/lib/track_avoid/: 123  123.py  avoid_01  depth  depth_1  depth_avoid  move_01  odom_path  path_1  pointcloud2_pclmsg  robot_location_path_test  send_goal.py  target  track_01  yolo_cv
devel/share/Car_Spraying/cmake/: Car_Spraying-msg-extras.cmake  Car_Spraying-msg-paths.cmake  Car_SprayingConfig.cmake
devel/share/camera_calibration/cmake/: camera_calibrationConfig.cmake
devel/share/home_work/cmake/: home_workConfig.cmake
pointcloud/: .776985dfca592523bbdb2b583988160e142d0833.cam  .8e30a22bcd4bb04fbf6762046b3b936a949bf745.cam  .994b3b407e40753ea9f87cceabd88e0ed202757c.cam  1.pcd  2.pcd  output.pcd  output_-10_25.pcd  output_-14.7_-10.2.pcd  output_-9.7_19.9.pcd  output_10_25.pcd  output_9.8_19.9.pcd
pointcloud/11.10/: output_19.8_-9.7.pcd
pointcloud/11.11/: output.pcd  output_1.pcd
pointcloud/11.19/: .6d541d38fe7bf464fe77c48a792adbad527aed1.cam  .bfcabb11a2e4179714355ffd1cd20750ad59e3d6.cam  .d8195febca2e9000ab6330cbb698e5eefb23450a.cam
pointcloud/11.30/: .1d35d2be4d0a70c5f5cffbeaf15ff0719e45a02.cam  .25bcedcc1cf063918d5d2f7ab4cd0fb375ee8124.cam  .520b5a17e218b0ae4e13719f6b47cc3238d1ac5b.cam  HR+sub+De+SOR.pcd  HR+sub+De+SOR_1.pcd  HR+sub+De.pcd  HR+sub+De_1.pcd  HR+sub+SOR+De.pcd  HR+sub+SOR.pcd  HR+sub_0.005.pcd  ROR.pcd  border.pcd  bouary_l.pcd  boudary.pcd  boudary_1.pcd  boudary_sub.pcd  ransac.off  ransac.ply  sor.pcd  sort.pcd  sort_ransac.pcd  sub+SOR.pcd  sub+SOR25_1.pcd  sub+SOR50_1.pcd  sub.pcd  sub_0.005.pcd  sub_0.01.pcd  sub_0.05.pcd  sub_1.pcd  temporary.pcd  vertex+MF(0.03).pcd  vertex_1.pcd
pointcloud/12.29/: CloudWithHeightRemoval.pcd  HR+sub+De+SOR.pcd  HR+sub+De.pcd  HR+sub+De_1.pcd  HR+sub_0.005.pcd  HR+sub_0.01.pcd  boudary.pcd  sub.pcd
pointcloud/3.1/: Hf_De.pcd  Hf_De_AVG.pcd  Hf_De_UniSmp.pcd  Hf_De_UniSmp_SOR.pcd  Hf_De_UniSmp_ransac.pcd  Hf_De_VG.pcd  Hf_De_VG_ransac.pcd  XYZRGB_Re_VG.pcd  XYZRGB_Re_VG_MF.pcd  XYZRGB_Re_VG_MF_SOR.pcd  border.pcd  border_SOR.pcd  sort.pcd
src/Car_Spraying/: CMakeLists.txt  package.xml
src/Car_Spraying/config/: output_cloud.rviz  point_mark.rviz
src/Car_Spraying/include/Car_Spraying/: MeanFiter.h  fitting.h
src/Car_Spraying/launch/: output_cloud.launch
src/Car_Spraying/msg/: SetTwoAngle.msg
src/Car_Spraying/scripts/: ply2obj.py
src/Car_Spraying/src/: ApproximateVG.cpp  FL.cpp  LatitudeLines.cpp  MF.cpp  MeanFiter.cpp  Sig_id.cpp  UniformSampling.cpp  actionGreedPT.cpp  alpha_shape.cpp  bilateralFilter.cpp  calculate.cpp  cloud_height.cpp  cloud_sort.cpp  cloud_transform.cpp  color_restrain.cpp  color_sepration.cpp  deletOutline.cpp  deletRepeatPoint_v1.cpp  fitting.cpp  hole_fix.cpp  image.cpp  image_segmentation.cpp  imagesub.cpp  img_test.cpp  laser_semantic_bayesian.cpp  output_cloud.cpp  output_txtfile.cpp  pcd2obj.cpp  pcd2off.cpp  pcd2ply.cpp  ply2obj.cpp  point_line.cpp  pointcloud_comparate.cpp  radiusOutlierRemoval.cpp  ransac.cpp  read_rgb.cpp  statisticalOutlierRemoval.cpp  uservo_demo_node.cpp  uservo_move.cpp  uservo_move_feedback.cpp  (+2 more)
src/camera_calibration/: CMakeLists.txt
src/camera_split/: CMakeLists.txt
src/camera_split/launch/: camera_split.launch  capture.launch  stereo_matching.launch
src/camera_split/src/: capture.cpp  capture_v2.cpp  key_board.cpp  op_yolo_boxes.cpp  sad_test.cpp  stereo_calibrator.cpp  stereo_matching.cpp  stereo_matching_ros.cpp  test.cpp  test_1.cpp
src/home_work/: CMakeLists.txt
src/home_work/base_param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/home_work/dwa_param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
src/home_work/launch/: base_local_movebase.launch  dwa_movebase.launch
src/home_work/src/: img_test_11.cpp  take_photo.cpp  work1114.cpp
src/plug_layers/: CMakeLists.txt  package.xml
src/plug_layers/launch/: move_base_carto.launch  move_base_global_plug.launch  move_base_plug.launch
src/plug_layers/src/: simple_layer.cpp
src/track_avoid/: CMakeLists.txt  package.xml
src/track_avoid/config/: rp_local_plug_01.rviz  show_pointcloud.rviz
src/track_avoid/launch/: amcl.launch  pointcloud2_pclmsg.launch  projected_pcl_2_laser.launch  rp_local_plug.launch  rp_local_plug_01.launch  track_avoid.launch
src/track_avoid/maps/: c-map22-3-2-1804.pgm  c-map22-3-2-1804.yaml
src/track_avoid/msg/: Depth.msg
src/track_avoid/src/: 123.cpp  avoid_01.cpp  depth.cpp  depth_1.cpp  depth_avoid.cpp  move_01.cpp  odom_path.cpp  path_1.cpp  pointcloud2_pclmsg.cpp  robot_location_path_test.cpp  target.cpp  track_01.cpp  yolo_cv.cpp
(+63 files in other folders)
